# django-books

./: README.md  pr.bat  pyproject.toml
.github/workflows/: django.yml
app/: admin.py  models.py  tests.py  urls.py  views.py
app/fixtures/: data.json
app/migrations/: 0001_initial.py  0002_alter_book_image.py
app/templates/app/: authors.html  authors_list.html  base.html  create_author.html  create_book.html  delete_author.html  delete_book.html  detail_book.html  index.html  update_author.html  update_book.html
books/: settings.py  urls.py
